...
  Quote("cye_what_a_drink", "What a drink", SRC_CYE, "oh my god what a drink milk and coffee"),
  Quote("cye_you_wait", "You wait", SRC_CYE, "so you wait you wait"),
  Quote("cye_youve_gotta_go_there", "Gotta go there", SRC_CYE, "you've youve gotta go there have a donut doughnut have a bagel"),
  Quote("dads_army_dont_like_it_up_em", "Don't like it up 'em", SRC_DADS_ARMY, "they don't dont like it up em"),
  Quote("dads_army_dont_panic_anyone", "Don't panic", SRC_DADS_ARMY, "don't dont panic anyone"),
  Quote("dads_army_dont_panic_mr_mainwaring", "Don't panic #2", SRC_DADS_ARMY, "don't dont panic mr mainwaring"),
  Quote("fawlty_erroneous_dish", "Erroneous dish", SRC_FAWLTY_TOWERS, "I have been given an erroneous dish"),
  Quote("fawlty_piece_of_your_brain", "Piece of your brain", SRC_FAWLTY_TOWERS, "Is this a piece of your brain Basil"),
  Quote("fawlty_where_did_you_get_it", "Where did you get it?", SRC_FAWLTY_TOWERS, "where did you get it Basil"),
  Quote("fawlty_how_did_you_get_it", "How did you get it?", SRC_FAWLTY_TOWERS, "that's right i mean how did you get it Fawlty Basil"),
  Quote("frank_better_and_better", "Better and better", SRC_FRANK, "every day in every way I'm im getting better and better"),
  Quote("frank_damage", "Damage", SRC_FRANK, "I'll Ill pay for any damage"),
  Quote("frank_ive_lost_em", "I've lost 'em", SRC_FRANK, "betty I've ive lost em lost them"),
  Quote("frank_legs_apart", "Legs apart", SRC_FRANK, "legs apart"),
...
